[gd_scene load_steps=9 format=3 uid="uid://d4gxqh2nbgr85"]

[ext_resource type="Script" path="res://playerscenes/player.gd" id="1_pk2jj"]
[ext_resource type="Texture2D" uid="uid://dli5831ykkeow" path="res://placeholderassets/black.png" id="2_fldp1"]
[ext_resource type="Texture2D" uid="uid://uj8jlen34wjk" path="res://placeholderassets/crosshair.png" id="3_x2f1w"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_icrtm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rv558"]
albedo_texture = ExtResource("2_fldp1")
roughness = 0.24

[sub_resource type="CapsuleMesh" id="CapsuleMesh_maf6j"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fsrbt"]
diffuse_mode = 3
specular_mode = 1
albedo_texture = ExtResource("2_fldp1")

[sub_resource type="BoxMesh" id="BoxMesh_vkbky"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_pk2jj")

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_icrtm")

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00313997, 0)
material_override = SubResource("StandardMaterial3D_rv558")
mesh = SubResource("CapsuleMesh_maf6j")

[node name="CameraRoot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.41224, 0)

[node name="Camera3D" type="Camera3D" parent="CameraRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.309256, 0)
current = true

[node name="Arm" type="MeshInstance3D" parent="CameraRoot"]
transform = Transform3D(0.315005, 0.116463, -1.51175e-09, 0.00427945, -0.115068, -0.294961, -0.0366889, 0.986507, -0.0344046, 0.342615, -0.000628114, -0.508658)
material_override = SubResource("StandardMaterial3D_fsrbt")
mesh = SubResource("BoxMesh_vkbky")
skeleton = NodePath("../..")

[node name="BulletSpawn" type="Marker3D" parent="CameraRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00792912, 0.309256, -0.903599)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/UI"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_x2f1w")

[node name="speed" type="RichTextLabel" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -55.0
offset_right = 253.0
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Speed: "
fit_content = true
scroll_active = false

[node name="TopLeft" type="Control" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 0
offset_right = 1000.0
offset_bottom = 150.0

[node name="position" type="RichTextLabel" parent="CanvasLayer/UI/TopLeft"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -27.5
offset_right = 1155.0
offset_bottom = 32.5
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Position: 
"
fit_content = true
scroll_active = false

[node name="fps" type="RichTextLabel" parent="CanvasLayer/UI/TopLeft"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -61.0
offset_right = 1155.0
offset_bottom = -1.0
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "FPS:"
fit_content = true
scroll_active = false

[node name="version" type="RichTextLabel" parent="CanvasLayer/UI/TopLeft"]
layout_mode = 1
offset_right = 1000.0
offset_bottom = 30.0
scale = Vector2(0.991418, 1)
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Version: 0.0.1 prototype phase
"
fit_content = true
scroll_active = false

[node name="BulletTimer" type="Timer" parent="."]

[connection signal="timeout" from="BulletTimer" to="." method="_on_bullet_timer_timeout"]
